Adding tags list API endpoint
